prevent smaller image to be stretched to full screen

--- a/www/theme/default/css/style.scss
+++ b/www/theme/default/css/style.scss
@@ -1011,8 +1011,8 @@ background-color: $state-info-bg-alpha;
 }
 
 .modal-image img {
-  width: calc(100% - 40px);
-  object-fit: contain;
+  max-width: calc(100% - 40px);
+  object-fit: scale-down;
 }
 
 /* hightlight a zone for tutos */
